--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,7 +51,7 @@ body {
 }
 
 .bg {
-  animation: slide 3s ease-in-out infinite alternate;
+  /* animation: slide 3s ease-in-out infinite alternate; */
   background-image: linear-gradient(-60deg, rgb(2, 9, 29) 50%, #09f 50%);
   bottom: 0;
   left: -50%;
