--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,6 +82,7 @@ h1 {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
 }
 body {
   height: 900px;
@@ -113,7 +114,7 @@ h1 {
 
 h3,
 p {
-  font-family: "Open Sans", sans-serif;
+  font-family: DM Sans, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
   margin-bottom: 30px;
 }
 .share {
@@ -157,4 +158,28 @@ p {
 
 .text-p {
   color: black;
+}
+
+.app-layout {
+  display: flex;
+  min-height: 100vh;
+}
+
+.left-section {
+  width: 75%;
+  padding: 1rem;
+}
+
+.right-section {
+  width: 25%;
+  padding: 1rem;
+  border-left: 1px solid #ccc;
+  background: #fff;
+  overflow-y: auto;
+}
+
+.center {
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
